# axiom

./: .env  Cargo.toml  LICENSE  README.md  USAGE.md
src/: ai.rs  art.rs  cli.rs  fractals.rs  main.rs  utils.rs
